default/objects/Comments__c/Comments__c.object-meta.xml
<CustomObject>
    <label>Comments</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>