default/objects/Comments__c/fields/ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDate__c</fullName>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>