default/objects/Comments__c/fields/IsHito__c.field-meta.xml
<CustomField>
    <fullName>IsHito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hito</label>
    <type>Checkbox</type>
</CustomField>