default/objects/Comments__c/fields/NotificationSubType__c.field-meta.xml
<CustomField>
    <fullName>NotificationSubType__c</fullName>
    <label>Notification SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NotificationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de asegurado</fullName>
            </value>
            <value>
                <fullName>Pendiente de perito</fullName>
            </value>
            <value>
                <fullName>Pendiente de compañia</fullName>
            </value>
            <value>
                <fullName>Pendiente de plataforma</fullName>
            </value>
            <value>
                <fullName>Pendiente de causante</fullName>
            </value>
            <value>
                <fullName>Pendiente de perjudicado</fullName>
            </value>
            <value>
                <fullName>Pendiete de otro reparador</fullName>
            </value>
            <value>
                <fullName>Pendiente de material</fullName>
            </value>
            <value>
                <fullName>Pendiente de secado</fullName>
            </value>
            <value>
                <fullName>Pendiente reparacion origen</fullName>
            </value>
            <value>
                <fullName>Pendiente reparacion asegurado</fullName>
            </value>
            <value>
                <fullName>Fin pendiente</fullName>
            </value>
            <value>
                <fullName>Detección de VTS</fullName>
            </value>
            <value>
                <fullName>Detección de Rehuse</fullName>
            </value>
            <value>
                <fullName>Solicitud de Perito</fullName>
            </value>
            <value>
                <fullName>Observaciones a gestionar por tramitador</fullName>
            </value>
            <value>
                <fullName>Aclaración cobertura póliza</fullName>
            </value>
            <value>
                <fullName>Soporte tecnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>