default/objects/Comments__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NotificationType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitud de cliente</fullName>
            </value>
            <value>
                <fullName>Dificultad localización origen</fullName>
            </value>
            <value>
                <fullName>Fraude</fullName>
            </value>
            <value>
                <fullName>Por cuantía de daños</fullName>
            </value>
            <value>
                <fullName>Daños en contenido</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Cambio de cita</fullName>
            </value>
            <value>
                <fullName>Por asegurado</fullName>
            </value>
            <value>
                <fullName>Por causante</fullName>
            </value>
            <value>
                <fullName>Por perjudicado</fullName>
            </value>
            <value>
                <fullName>Suspensión de cita</fullName>
            </value>
            <value>
                <fullName>Por plataforma</fullName>
            </value>
            <value>
                <fullName>Por CIA</fullName>
            </value>
            <value>
                <fullName>Por perito</fullName>
            </value>
            <value>
                <fullName>Aplazada por el cliente</fullName>
            </value>
            <value>
                <fullName>Pendiente de causante</fullName>
            </value>
            <value>
                <fullName>Pendiente de perjudicado</fullName>
            </value>
            <value>
                <fullName>Anulación de encargo. Repara causante</fullName>
            </value>
            <value>
                <fullName>Anulación de encargo. Se indemniza</fullName>
            </value>
            <value>
                <fullName>Riesgo no asegurado</fullName>
            </value>
            <value>
                <fullName>No contestan</fullName>
            </value>
            <value>
                <fullName>Telefono equivocado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>