default/objects/Comments__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WPP</fullName>
                <label>Whatsapp</label>
            </value>
            <value>
                <fullName>EML</fullName>
                <label>Correo electrónico</label>
            </value>
            <value>
                <fullName>Insurance Company Claim</fullName>
            </value>
            <value>
                <fullName>Insurance Company Order</fullName>
            </value>
            <value>
                <fullName>Insurance Company Incident</fullName>
            </value>
            <value>
                <fullName>Supplier Portal</fullName>
            </value>
            <value>
                <fullName>ELBA</fullName>
                <default>true</default>
                <label>ELBA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>