default/objects/Comments__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Comments</fullName>
                <default>true</default>
                <label>Comments</label>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>EML</fullName>
                <isActive>false</isActive>
                <label>EML</label>
            </value>
            <value>
                <fullName>SMS</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
            <value>
                <fullName>WPP</fullName>
                <isActive>false</isActive>
                <label>WPP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>